# universal-problem-solver

./: README.md
rust/: Cargo.toml  README.md
rust/benches/: tetris2_benchmark.rs  tetris3_benchmark.rs  tetris4_benchmark.rs  tetris5_benchmark.rs  tetris_benchmark.rs
rust/src/: lib.rs
rust/src/example_problems/: bit_set_64.rs  mod.rs  puzzle_pieces.rs  tetris.rs  tetris2.rs  tetris3.rs  tetris4.rs  tetris5.rs
rust/tests/: integration_test.rs  tetris2_test.rs  tetris3_test.rs  tetris4_test.rs  tetris5_test.rs  tetris_test.rs
typescript/: README.md  package.json  tsconfig.json  zakzak.config.json
typescript/benches/: tetris.benchmark.ts
typescript/src/: index.ts
typescript/src/example-problems/: tetris.ts
typescript/test/: test.ts  tetris.test.ts
