[package]
name = "universal-problem-solver-rs"
version = "0.1.0"
authors = ["Marco Stahl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
itertools = "0.10.0"
bit-vec = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "tetris_benchmark"
harness = false

[[bench]]
name = "tetris2_benchmark"
harness = false

[[bench]]
name = "tetris3_benchmark"
harness = false

[[bench]]
name = "tetris4_benchmark"
harness = false

[[bench]]
name = "tetris5_benchmark"
harness = false